--- a/historia-valores.html
+++ b/historia-valores.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
+<body class="historia-page">
             <header class="top-header">
         <div class="container">
             <div class="top-header-content">
@@ -213,7 +213,7 @@
                 </aside>
                             </div>
             <div class="small-line mvw-small-line"></div>
-            <div class="mvw-section">
+            <div class="mvw-section scroll-fade">
                 <div class="mvw-card">
                     <h4>Missão</h4>
                     <p>Promover a segurança pública, protegendo vidas, garantindo a mobilidade nas rodovias federais e nas áreas de interesse da União.</p>
@@ -233,7 +233,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="uniprf-panels">
+            <div class="uniprf-panels scroll-fade">
                 <div class="uniprf-panel">
                     <div class="uniprf-panel-title">ENTREGAS INSTITUCIONAIS</div>
                     <div class="uniprf-panel-grid">
