--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <section class="prf-numbers">
         <div class="container">
-            <div class="numbers-header">
+            <div class="numbers-header scroll-fade">
                 <h2>PRF EM NÚMEROS</h2>
                 <div class="small-line"></div>
                     <p class="white">Acompanhe algumas estatísticas da PRF em 2026 em tempo real.</p>
@@ -128,7 +128,7 @@
 
     <section class="latest-news" id="noticias">
         <div class="container">
-            <div class="news-header">
+            <div class="news-header scroll-fade">
                 <h2>NOTÍCIAS RECENTES</h2>
                 <div class="red-line-news"></div>
             </div>
