--- a/organograma.html
+++ b/organograma.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
+<body class="organograma-page">
             <header class="top-header">
         <div class="container">
             <div class="top-header-content">
