--- a/interno/aprovacoes.html
+++ b/interno/aprovacoes.html
@@ -267,9 +267,9 @@
                     </select>
                 </label>
                 <label id="roles-field-grupamento">
-                    <span>Grupamento</span>
-                    <select id="roles-grupamento" multiple>
-                        <option value="">Selecione o grupamento</option>
+                    <span>Grupamento principal</span>
+                    <select id="roles-grupamento-principal">
+                        <option value="">Selecione o grupamento principal</option>
                         <option value="Diretoria de Gestão de Pessoas">Diretoria de Gestão de Pessoas</option>
                         <option value="Diretoria Executiva">Diretoria Executiva</option>
                         <option value="Diretoria Operacional">Diretoria Operacional</option>
@@ -280,7 +280,19 @@
                         <option value="Grupo de Patrulhamento Tático">Grupo de Patrulhamento Tático</option>
                         <option value="Núcleo de Operações Especiais">Núcleo de Operações Especiais</option>
                     </select>
-                    <small class="approvals-hint">Use Ctrl/Command para selecionar múltiplos.</small>
+                    <span>Grupamento secundário</span>
+                    <select id="roles-grupamento-secundario">
+                        <option value="">Sem grupamento secundário</option>
+                        <option value="Diretoria de Gestão de Pessoas">Diretoria de Gestão de Pessoas</option>
+                        <option value="Diretoria Executiva">Diretoria Executiva</option>
+                        <option value="Diretoria Operacional">Diretoria Operacional</option>
+                        <option value="Ronda PRF">Ronda PRF</option>
+                        <option value="Grupo de Patrulhamento Motorizado">Grupo de Patrulhamento Motorizado</option>
+                        <option value="Universidade Corporativa da PRF">Universidade Corporativa da PRF</option>
+                        <option value="Divisão de Operações Aéreas">Divisão de Operações Aéreas</option>
+                        <option value="Grupo de Patrulhamento Tático">Grupo de Patrulhamento Tático</option>
+                        <option value="Núcleo de Operações Especiais">Núcleo de Operações Especiais</option>
+                    </select>
                 </label>
                 <label id="roles-field-acesso">
                     <span>Acesso</span>
