--- a/interno/bou.html
+++ b/interno/bou.html
@@ -354,6 +354,7 @@
                                 <div class="bou-actions">
                                     <button id="btnEnviarCompleto" class="bou-btn bou-btn-primary" type="button">Enviar BOU</button>
                                     <button id="btnCopiarBou" class="bou-btn bou-btn-warning" type="button">Copiar BOU</button>
+                                    <a href="https://chatgpt.com" target="_blank"><button class="bou-btn bou-btn-third" type="button">ChatGPT</button></a>
                                     <button id="btnLimparCampos" class="bou-btn bou-btn-secondary" type="button">Limpar Campos</button>
                                     <span id="statusEntradaCompleta" class="bou-status">Pronto para enviar.</span>
                                 </div>
